k8s/App-Deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-deployment
  namespace: app-deployment-namespace
spec:
  selector:
    matchLabels:
      app: app-deployment
  replicas: 6
  template:
    metadata:
      labels:
        app: app-deployment
    spec:
      containers:
        - name: app-deployment
          image: srinu641/spring-image:latest
          imagePullPolicy: Always  #todo imagePullPolicy: "IfNotPresent"
          ports:
            - containerPort: 8998
          env:   # Setting Environmental Variables
            - name: DB_HOST   # Setting Database host address
              value: mysql
            - name: DB_NAME  # Setting Database name
              value: jdbc:mysql://database.cn2aysi4umep.us-east-1.rds.amazonaws.com:3306/spring
            - name: DB_USERNAME  # Setting Database username
              value: root
            - name: DB_PASSWORD # Setting Database password
              value: srinu1234
---
#todo  Define a 'Service' To Expose the application
apiVersion: v1
kind: Service
metadata:
  name: app-service
  namespace: app-deployment-namespace
spec:
  ports:
    - protocol: "TCP"
      port: 8998    # TODO Port inside the cluster
      targetPort: 8998   #TODO  Port exposed to the outside
  selector:
    app: app-deployment
  type: NodePort
---
