k8s/app-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-deployment
spec:
  selector:
    matchLabels:
      app: app-deployment
  replicas: 6
  template:
    metadata:
      labels:
        app: app-deployment
    spec:
      containers:
        - name: app-deployment
          image: srinu641/spring-image:latest
          imagePullPolicy: Always    #todo imagePullPolicy: "IfNotPresent"
          ports:
            - containerPort: 8998
          env:   # Setting Environmental Variables            - name: DB_HOST   # Setting Database host address from configMap
            - name: DB_HOST   # Setting Database host address from configMap
              valueFrom :
                configMapKeyRef :
                  name : db-config
                  key :  host

            - name: DB_NAME  # Setting Database name from configMap
              valueFrom :
                configMapKeyRef :
                  name : db-config # todo call the yml file name
                  key :  dbName

            - name: DB_USERNAME  # Setting Database username from Secret
              valueFrom :
                secretKeyRef :
                  name : mysql-secrets # todo call the yml file name
                  key :  username

            - name: DB_PASSWORD # Setting Database password from Secret
              valueFrom :
                secretKeyRef :
                  name : mysql-secrets
                  key : password
---

#todo  Define a 'Service' To Expose the application
apiVersion: v1
kind: Service
metadata:
  name: app-service
spec:
  ports:
    - protocol: "TCP"
      port: 8998    # TODO Port inside the cluster
      targetPort: 8998   #TODO  Port exposed to the outside
  selector:
    app: app-deployment
  type: NodePort
---
